--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
-black==19.10b0
+black
 dash
 dash-bootstrap-components>=0.8.2
-flake8==3.8.4
-isort==5.7.0
+flake8
+isort
 jsonschema
 pre-commit
 pyyaml
